--- a/components/green/green.html
+++ b/components/green/green.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8">
 		<title>HTML5 Canvas柳枝随风飘摇动画DEMO演示</title>
 
-		<link rel="stylesheet" href="green.css">
+		<link rel="stylesheet" href="css/style.css">
 
 	</head>
 	<body>
-		<script src="green.js"></script>
+		<script src="js/script.js"></script>
 
 	</body>
 </html>
